--- a/index.html
+++ b/index.html
@@ -565,14 +565,13 @@
             <div class="container">
                 <div class="fotbl">
                     <img src="images/icon15.png" alt="">友情链接：
-                    <a href="##">青岛百度</a>
-                    <a href="##">龙采集团</a>
+                    <a href="##">青岛百度</a>                 
                     <a href="##">新浪微博</a>
                     <a href="##">浩楠秀装饰</a>
                 </div>
                 <div class="fotbr">
-                    <a href="#">网站备案：辽ICP备12003456号-1</a>
-                    <a href="#">技术支持：大连龙采集团</a>
+                    <a href="#">网站备案：https://lzs1314.github.io/liu/</a>
+                    <a href="#">技术支持：lzs</a>
                 </div>
                 <div class="clear"></div>
             </div>
