--- a/index.html
+++ b/index.html
@@ -529,9 +529,7 @@
     <div class="cebian">
         <ul>
             <li class="li1">
-                <div class="ewm">
-                    <img src="images/ewm.png" alt="">
-                </div>
+               <a href="##"></a>
             </li>
             <li class="li2">
                 <a href="##"></a>
