--- a/bg/index.html
+++ b/bg/index.html
@@ -29,20 +29,18 @@
   <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(Chrome)或者火狐(Firefox)浏览器，或者其他游览器的最新版本。</div>
   <div id="wrap">
     <div id="text">
-      <div id="code"> <font color="#FF0000"> <span class="say">亲爱的小宝宝，我爱你</span><br>
+      <div id="code"> <font color="#FF0000"> <span class="say">亲爱的小宝，我爱你</span><br>
+        <span class="say">信任是彼此相爱的土壤,爱情的幼苗需要理解浇灌成长</span><br>
+        <span class="say">浪漫可以让爱情更加灿烂,岁月的考验让爱情坚强如刚</span><br>
+        <span class="say">亲爱的,情人节到了,爱你没有商量</span><br>
+        <span class="say">我愿与你地久天长!</span><br>
+        <span class="say">我知道我不会甜言蜜语，但是我会用行动证明一切</span><br>
         <span class="say"> </span><br>
-        <span class="say"> 我知道我不会甜言蜜语，但是我会用行动证明一切</span><br>
-        <span class="say"> </span><br>
-        <span class="say">你说我啰嗦，有些东西因为越在乎所以越失去</span><br>
-        <span class="say">因为我太爱你了，所以我失去你了</span><br>
-        <span class="say">因为我太啰嗦了，所以你离开了我</span><br>
-        <span class="say">虽然你看不见我的告白，但是我还是要把这些心里话说出来</span><br>
-        <span class="say"> </span><br>
-        <span class="say"><span class="space"></span> -- 爱你的仁希--</span> </font>
+        <span class="say"><span class="space"></span> -- 爱你的帅--</span> </font>
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的小宝宝，我爱你</font> <span class="STYLE1">已经是……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的小宝，我爱你</font> <span class="STYLE1">已经是……</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
