--- a/bg/index.html
+++ b/bg/index.html
@@ -30,11 +30,14 @@
   <div id="wrap">
     <div id="text">
       <div id="code"> <font color="#FF0000"> <span class="say">亲爱的小宝，我爱你</span><br>
-        <span class="say">信任是彼此相爱的土壤,爱情的幼苗需要理解浇灌成长</span><br>
-        <span class="say">浪漫可以让爱情更加灿烂,岁月的考验让爱情坚强如刚</span><br>
+        <span class="say">信任是彼此相爱的土壤</span><br>
+        <span class="say">爱情的幼苗需要理解浇灌成长</span><br>
+        <span class="say">浪漫可以让爱情更加灿烂</span><br>
+        <span class="say">岁月的考验让爱情坚强如刚</span><br>
         <span class="say">亲爱的,情人节到了,爱你没有商量</span><br>
         <span class="say">我愿与你地久天长!</span><br>
-        <span class="say">我知道我不会甜言蜜语，但是我会用行动证明一切</span><br>
+        <span class="say">我知道我不会甜言蜜语</span><br>
+        <span class="say">但是我会用行动证明一切</span><br>
         <span class="say"> </span><br>
         <span class="say"><span class="space"></span> -- 爱你的帅--</span> </font>
         </p>
