--- a/LoveY/index.html
+++ b/LoveY/index.html
@@ -207,7 +207,7 @@ function typeWrite(){
 				<div class="type_words" style="position: absolute;
 				top: 50px;
 				z-index: 99999;
-				color: #bf6e6e;"></div>
+				color: #de6262;"></div>
 			</div>
  <!--#Header-->
 	<div id="header" style="opacity:0.85">
