--- a/LoveY/index.html
+++ b/LoveY/index.html
@@ -185,7 +185,7 @@ function modal(content, callback) {
 	});
 }
 
-var myWords = '&nbsp&nbsp&nbsp&nbsp我百度，上面说是人的一生会遇到2920万人，而两个人相爱的概率只有0.000049。在这茫茫人海中，两个人能相遇就值得感激，能相爱更是一种难得。所以，我很庆幸上天让我遇见了你。真爱来了，我们要好好把握。不管面临多大的压力，不管前面的路如何崎岖.不管经历过什么,我仍坚信最浪漫的事就是和你一起慢慢变老.还记得否,曾经的点点滴滴，从相识到现在，从冷漠到关心,从谢绝到依赖，从生疏到相爱,一切似乎都是那么遥远,又似乎那么触手可及.正如某人说的那样,但求岁月静好,现世安稳.一生守候不是一句简单而苍白的山盟海誓，而是无数个平淡的日子同舟共济，相濡以沫.相信下面的计时器,将永远继续下去,直至数据溢出.---------------------Just for You, LiuZhenShuai';
+var myWords = '我百度，上面说是人的一生会遇到2920万人，而两个人相爱的概率只有0.000049。在这茫茫人海中，两个人能相遇就值得感激，能相爱更是一种难得。所以，我很庆幸上天让我遇见了你。真爱来了，我们要好好把握。不管面临多大的压力，不管前面的路如何崎岖.不管经历过什么,我仍坚信最浪漫的事就是和你一起慢慢变老.还记得否,曾经的点点滴滴，从相识到现在，从冷漠到关心,从谢绝到依赖，从生疏到相爱,一切似乎都是那么遥远,又似乎那么触手可及.正如某人说的那样,但求岁月静好,现世安稳.一生守候不是一句简单而苍白的山盟海誓，而是无数个平淡的日子同舟共济，相濡以沫.相信下面的计时器,将永远继续下去,直至数据溢出.---------------------Just for You, LiuZhenShuai';
 var x = 0;
 var speed = 150;
 var current = 0;
